# agentic-trading-bots

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
agentic_trading/: __init__.py  finbert_sentiment.py  pipeline_common.py  prediction_arimax.py  prediction_baseline.py  prediction_features.py  prediction_gaussian_process.py  prediction_lightgbm.py  prediction_lightgbm_common.py  prediction_lightgbm_direct.py  prediction_lstm.py  prediction_metrics.py  prediction_ridge_arx.py  preprocessing.py
agentic_trading/training/: __init__.py  common.py  multiple_asset_ppo.py  single_asset_ppo.py
agents/: README.md  requirements.txt
agents/multiple_asset/: agent_ppo.py  agent_ppo2.py  plot_prob_action.py  plot_prob_action_ind.py
agents/single_asset/: agent_individual_ppo.py  plot_prob_action_range.py
configs/agents/: multiple_asset_ppo.json  single_asset_ppo.json
docs/: agents.rst  architecture.md  architecture.rst  conf.py  data.md  data.rst  deployment.rst  index.rst  modularity_review.rst  overview.rst  requirements.txt
scripts/: predict-arimax.sh  predict-baseline.sh  predict-gaussian-process.sh  predict-lightgbm-direct.sh  predict-lightgbm.sh  predict-lstm.sh  predict-ridge-arx.sh  preprocess.sh  test-py.sh  train-multi.sh  train-single.sh
src/app/: globals.css  (+2 more)
tests/: README.md  test_pipeline_common.py  test_prediction_arimax.py  test_prediction_features.py  test_prediction_gaussian_process.py  test_prediction_lightgbm.py  test_prediction_lstm.py  test_preprocessing.py
(+288 files in other folders)
