[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-trading-bots"
version = "0.1.0"
description = "Local-first commodity dashboard with preprocessing and PPO trading-bot training modules."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
agents = [
  "gymnasium>=0.29",
  "lightgbm>=4.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "stable-baselines3>=2.3",
  "statsmodels>=0.14",
  "torch>=2.2",
]
sentiment = [
  "torch>=2.2",
  "transformers>=4.40",
]
docs = [
  "sphinx>=7.2,<9",
  "sphinx-rtd-theme>=2,<4",
]

[tool.setuptools.packages.find]
include = ["agentic_trading*"]
